feat (layout, content) : added Coming Soon page. Added employment to menu. Pointed Employment, Projects and Contact pages to Coming Soon. Added layout and Content to the About Me Page.

--- a/src/data/siteConfig.json
+++ b/src/data/siteConfig.json
@@ -9,6 +9,7 @@
   "navigation": [
     { "name": "Home", "path": "/" },
     { "name": "About Me", "path": "/about" },
+    { "name": "Employment", "path": "/employment" },
     { "name": "Projects", "path": "/projects" },
     { "name": "Contact", "path": "/contact" }
   ]
