Feat (content and styling) (#9)
* feat (layout) : added darkmode, moved some styling to apply sections within index.css. Added grid to home page with responsive design and fixed image size.

* feat (layout, content) : added Coming Soon page. Added employment to menu. Pointed Employment, Projects and Contact pages to Coming Soon. Added layout and Content to the About Me Page.

--- a/src/data/siteConfig.json
+++ b/src/data/siteConfig.json
@@ -1,14 +1,15 @@
 {
   "site": {
     "name": "My Portfolio",
-    "description": "A modern developer portfolio built with React, TypeScript, Tailwind CSS, and Vite.",
+    "description": "Former Software Engineer returning to software development, rebuilding skills in modern technologies.",
     "author": "Neil Surridge",
     "github": "https://github.com/NeilDev1976",
     "email": ""
   },
   "navigation": [
     { "name": "Home", "path": "/" },
-    { "name": "About", "path": "/about" },
+    { "name": "About Me", "path": "/about" },
+    { "name": "Employment", "path": "/employment" },
     { "name": "Projects", "path": "/projects" },
     { "name": "Contact", "path": "/contact" }
   ]
